<resources>
    <string name="app_name">ActivityLog</string>

    <!-- names of screens -->
    <string name="log_activity">Log an Activity</string>
    <string name="start_activity">Start an Activity</string>
    <string name="analytics">Analytics</string>
    <string name="view_edit_log">View/Edit Log</string>
    <string name="new_goal">Create New Goal</string>
    <string name="manage_goals">View/Edit Goals</string>

    <!-- EditLogEntryDialog strings -->
    <string name="log_name_field">Activity Name:</string>
    <string name="log_duration_field">Duration: %s</string>
    <string name="log_date_field">Date: %s</string>
    <string name="confirm">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_no_name">Please Specify an Activity Name</string>
    <string name="new_activity">New Activity</string>
    <string name="set_duration">Set Duration</string>

    <!-- TimerActivity Strings -->
    <string name="timer_activity_label">Time an Activity</string>
    <string name="start_timer">Start</string>
    <string name="pause_timer">Pause</string>
    <string name="log_timer">Log This</string>
    <string name="reset_timer">Reset</string>
    <string name="count_up">Count Up</string>
    <string name="count_down">Count Down</string>
    <string name="set_count_down">Set Count Down Time</string>

    <!-- Filter Strings -->
    <string name="filter_by">Filter By</string>
    <string name="name_lable">Activity Name:</string>
    <string name="update_filter">Update Filter</string>
    <string name="activity_any">Any</string>
    <string name="date_label">Date:</string>
    <string name="date_conjunction">and</string>

    <string name="date_any">Any</string>
    <string name="date_on">On</string>
    <string name="date_before">Before</string>
    <string name="date_after">After</string>
    <string name="date_between">Between</string>

    <string name="duration_label">Duration:</string>
    <string name="duration_conjunction">and</string>

    <string name="duration_any">Any</string>
    <string name="duration_exactly">Exactly</string>
    <string name="duration_more">More Than</string>
    <string name="duration_less">Less Than</string>
    <string name="duration_between">Between</string>

    <!-- AnalyticsActivity Strings -->
    <string name="analytics_activity_label">Analytics</string>
    <string name="other">Other</string>
    <string name="no_data_available">No Entries Meet The Given Criteria</string>
    <string name="showing">Showing</string>
    <string name="all_sessions">All Sessions</string>
    <string name="all_time">All Time</string>
    <string name="in_filter">In Filter</string>
    <!-- todo: singular? -->
    <string name="sessions">Sessions</string>
    <string name="hours">Hours</string>

    <!-- ChartConfigFragment Strings -->
    <string name="chart_config_label">Configure Chart</string>
    <string name="chart_by_label">Chart By:</string>
    <string name="chart_type_label">Chart Type:</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="line_chart">Line Chart</string>
    <string name="time_spent">Time Spent</string>
    <string name="num_sessions">Number of Sessions</string>

    <!-- ViewEditLogActivity Strings -->
    <string name="viewlog_activity_label">View/Edit Log</string>
    <string name="edit_log_entry">Edit</string>

    <!-- DailyReportDialog Strings -->
    <string name="report_title">Daily Report</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_30_days">Last 30 Days</string>

    <!-- MainScreenActivity Strings -->
    <string name="home_msg">Welcome Back!</string>

    <!-- DurationPickerLayout Strings -->
    <string name="set_time">Confirm</string>
</resources>
