<?xml version="1.0" encoding="utf-8"?>
<!-- provides UI for user to create or edit a LogEntry -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <!-- title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/log_activity"
        android:textSize="40sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/log_name_field"
            android:layout_weight="1"/>
        <!-- spinner for user to choose from possible activity names, or elect to create a new activity -->
        <Spinner
            android:id="@+id/name_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!-- field for user to enter a new activity name if they chose to do so in the spinner -->
        <EditText
            android:id="@+id/new_activity_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textCapWords|textNoSuggestions"
            android:imeOptions="actionNext"
            android:maxLength="15"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/display_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/log_duration_field"/>
        <ImageButton
            android:id="@+id/set_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:background="@drawable/ic_add_black_18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/log_date_field"/>
        <ImageButton
            android:id="@+id/show_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/display_menu_button"/>
    </LinearLayout>
    <!-- error message, if any. Set to GONE by default -->
    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"/>
    <!-- confirmation button to save log and exit -->
    <Button
        android:id="@+id/save_and_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"/>
</LinearLayout>