<?xml version="1.0" encoding="utf-8"?>
<!-- UI for user to configure a chart -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/filter_outline">
    <TextView
        android:id="@+id/chart_config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/chart_config_label"/>
    <LinearLayout
        android:id="@+id/chartType_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/chart_config_title"
        android:layout_toRightOf="@+id/chart_config_title"
        android:layout_toEndOf="@+id/chart_config_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_type_label"
            android:layout_gravity="center_vertical"/>
        <Spinner
            android:id="@+id/chart_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/chartBy_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/chartType_row"
        android:layout_toRightOf="@+id/chart_config_title"
        android:layout_toEndOf="@+id/chart_config_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_by_label"
            android:layout_gravity="center_vertical"/>
        <Spinner
            android:id="@+id/chart_by_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</RelativeLayout>